--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             background-image:url(images/1.jpg);
             background-size: 5.6rem 3.9rem;
             transition: all .5s;
-            font-size:10px;
+            font-size:20px;
         }
         .info{
             position:absolute;
@@ -157,7 +157,6 @@
     var width = document.documentElement.clientWidth;
     var height =  document.documentElement.clientHeight;
     if( width < height ){
-        console.log(width + " " + height);
         $print =  $('#print');
         $print.width(height);
         $print.height(width);
@@ -197,7 +196,7 @@
 </script>
 <script>
     var winW = document.documentElement.clientWidth;
-    var design=736;
+    var design=414;
     var fontSize=100;
     var rem=design/fontSize;
     if(winW>design){
@@ -244,7 +243,7 @@
                     height=1.3+"rem";
                     var t=Math.floor(i/4)*1.3;
                     var l=(i%4)*1.4;
-                    top=t+"rem"
+                    top=t+"rem";
                     left=l+"rem";
                     backgroundPosition=-l+"rem -"+t+"rem";
                 }
@@ -307,8 +306,8 @@
 
         for (var i = 0; i < boxs.length; i++) {
             boxs[i].addEventListener("touchstart",function(e){
-                info.x = (e.targetTouches[0].pageX)/100;
-                info.y = (e.targetTouches[0].pageY)/100;
+                info.x = (e.targetTouches[0].pageY)/100;
+                info.y = -(e.targetTouches[0].pageX)/100;
                 info.top = parseFloat( this.style.top );
                 info.left =parseFloat(  this.style.left );
                 this.oriLeft = info.left;
@@ -319,8 +318,8 @@
 
             boxs[i].addEventListener("touchmove",function(e){
                 this.style["z-index"] = 1000;
-                var newTop = info.top - info.y + (e.targetTouches[0].pageY)/100;
-                var newLeft = info.left - info.x + (e.targetTouches[0].pageX)/100;
+                var newTop = info.top - info.y - (e.targetTouches[0].pageX)/100;
+                var newLeft = info.left - info.x + (e.targetTouches[0].pageY)/100;
 
                 this.style.left = newLeft + "rem";
                 this.style.top = newTop + "rem";
@@ -329,8 +328,8 @@
             boxs[i].addEventListener("touchend",function(e){
                 this.style.transition=" all .5s";
                 this.style["z-index"] = 0;
-                var x = (e.changedTouches[0].pageX -imgBox.offsetLeft)/100 ,
-                        y = (e.changedTouches[0].pageY -imgBox.offsetTop)/100;
+                var x = (e.changedTouches[0].pageY -imgBox.offsetLeft)/100 ,
+                        y = (-e.changedTouches[0].pageX -imgBox.offsetTop)/100;
                 var obj = findSwtichBox(this,x,y);
 
                 if(obj === this) {
@@ -368,13 +367,15 @@
 
         }
 
+
+//        碰撞检测
         var findSwtichBox=function(obj,x,y){
             //自己不参与检查
             for (var i = 0; i < boxs.length; i++) {
-                if(obj !== boxs[i]){
-                    var t1 = x >  boxs[i].offsetLeft/100 && x < (boxs[i].offsetLeft+ 100)/100;
-                    var t2 = y >  boxs[i].offsetTop /100 && y < (boxs[i].offsetTop + 100)/100;
-                    if(t1 && t2 ){
+                if(obj!=boxs[i]){
+                    var t1 = x>  boxs[i].offsetLeft/100 && x< (boxs[i].offsetLeft/100+1.4);
+                    var t2 = Math.abs(y)>2.6-boxs[i].offsetTop /100 && Math.abs(y)< (3.9-boxs[i].offsetTop /100);
+                    if(t1&&t2 ){
                         return boxs[i];
                     }
                 }
@@ -384,6 +385,8 @@
         }
     };
     game();
+
+
    var cover=function(){ //遮罩层
        var oDiv=document.createElement("div");
        oDiv.id="cover";
